<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/AutoCheckinLinearLayout">
<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:padding="5dip" android:layout_width="fill_parent"><ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/bolle2_80"></ImageView>
<LinearLayout android:id="@+id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autocheckinheadline" android:textStyle="bold" android:textSize="18dip" android:gravity="center_horizontal"></TextView><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_gravity="center_horizontal"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop" android:id="@+id/StatusButton"></Button>

<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reloadfavs" android:id="@+id/ReloadButton"></Button>
</LinearLayout>
</LinearLayout>

</LinearLayout>
</LinearLayout>
