<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent"
     xmlns:droidfu="http://github.com/droidfu/schema">
	<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_marginTop="5px" android:layout_width="fill_parent">
	
	 <com.github.droidfu.widgets.WebImageView android:id="@+id/AvatarWebImageView"
      android:layout_width="48px"
      android:layout_height="48px" 
      droidfu:autoLoad="false"
      />
	
	
		<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center_vertical" android:paddingRight="5px">
			<TextView android:text="@+id/TweetDate" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/TweetDate" android:textSize="14px"></TextView>
			<TextView android:text="@+id/TweetUser" android:id="@+id/TweetUser" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textSize="14px" android:textStyle="bold"></TextView>
		</LinearLayout>
</LinearLayout>
	
	<TextView android:text="@+id/TweetText" android:id="@+id/TweetText" android:layout_height="wrap_content" android:paddingBottom="5px" android:paddingTop="5px" android:textSize="14px" android:paddingLeft="5px" android:paddingRight="5px" android:textStyle="bold" android:layout_width="fill_parent"></TextView>

	<LinearLayout android:id="@+id/LinearLayout03" android:background="#ffffff" android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent">

		

		
		<LinearLayout android:id="@+id/TwitterReplyAction" android:background="@android:drawable/list_selector_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:clickable="true" android:hapticFeedbackEnabled="true" android:focusableInTouchMode="false" android:focusable="false">
			<ImageView android:id="@+id/TwitterReplyActionImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_send"></ImageView>
			<TextView android:id="@+id/TwitterReplyActionTextView" android:layout_width="wrap_content" android:text="@string/twitter_reply" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:paddingRight="5px" android:textColor="#000000"></TextView>
		</LinearLayout>
		
		<LinearLayout android:id="@+id/TwitterFollowerAction" android:background="@android:drawable/list_selector_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:clickable="true" android:focusableInTouchMode="false" android:focusable="false">
			<ImageView android:id="@+id/TwitterFollowerActionImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_add"></ImageView>
			<TextView android:id="@+id/TwitterFollowerActionTextView" android:layout_width="wrap_content" android:text="@string/twitter_follow" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:layout_gravity="center_vertical" android:textColor="#000000" android:layout_height="wrap_content"></TextView>
		</LinearLayout>

		<LinearLayout android:id="@+id/TwitterWebAction" android:background="@android:drawable/list_selector_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:clickable="true" android:focusableInTouchMode="false" android:focusable="false">
			<ImageView android:id="@+id/TwitterWebActionImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_view"></ImageView>
			<TextView android:id="@+id/TwitterWebActionTextView" android:layout_width="wrap_content" android:text="@string/twitter_web" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:layout_gravity="center_vertical" android:textColor="#000000" android:layout_height="wrap_content" android:paddingRight="5px"></TextView>
		</LinearLayout>

	</LinearLayout>
</LinearLayout>
