<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent" android:background="#4E0058">
	<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_marginTop="5px" android:layout_width="fill_parent">
		<ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:src="@drawable/bt_logo"></ImageView>
		
</LinearLayout>
	
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TextView android:text="EventLocationName" android:id="@+id/EventLocationName" android:layout_height="wrap_content" android:paddingBottom="5px" android:paddingTop="5px" android:textSize="14px" android:paddingLeft="5px" android:paddingRight="5px" android:textStyle="bold" android:layout_width="fill_parent"></TextView>
	<TextView android:id="@+id/EventLocationAddress" android:layout_height="wrap_content" android:paddingBottom="5px" android:paddingTop="5px" android:textSize="14px" android:paddingLeft="5px" android:paddingRight="5px" android:layout_width="fill_parent"></TextView>
	</LinearLayout>
	
	<LinearLayout android:id="@+id/EventLinearLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical"></LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout03" android:background="#ffffff" android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent">

		<LinearLayout android:id="@+id/EventFavAction" android:background="@android:drawable/list_selector_background" android:layout_height="wrap_content" android:clickable="true" android:hapticFeedbackEnabled="true" android:focusableInTouchMode="false" android:focusable="false" android:layout_width="wrap_content" android:paddingTop="5px">
			<ImageView android:id="@+id/EventFavActionImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/btn_star_big_off" android:paddingLeft="8px" android:paddingRight="10px"></ImageView>
			<TextView android:id="@+id/EventFavActionTextView" android:layout_width="wrap_content" android:text="@string/twitter_fav" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:textColor="#000000" android:layout_gravity="center" android:layout_height="wrap_content"></TextView>
		</LinearLayout>

		
		<LinearLayout android:id="@+id/EventFoursquareCheckinAction" android:background="@android:drawable/list_selector_background" android:layout_height="wrap_content" android:clickable="true" android:hapticFeedbackEnabled="true" android:focusableInTouchMode="false" android:focusable="false" android:layout_width="wrap_content" android:visibility="invisible">
			<ImageView android:id="@+id/EventFoursquareCheckinImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_manage"></ImageView>
			<TextView android:id="@+id/EventFoursquareCheckinTextView" android:layout_width="wrap_content" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:layout_gravity="center_vertical" android:textColor="#000000" android:layout_height="wrap_content" android:text="@string/foursquare_checkin"></TextView>
		</LinearLayout>
		
		

		<LinearLayout android:id="@+id/EventWebAction" android:background="@android:drawable/list_selector_background" android:layout_height="wrap_content" android:clickable="true" android:focusableInTouchMode="false" android:focusable="false" android:layout_width="wrap_content">
			<ImageView android:id="@+id/EventWebActionImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@android:drawable/ic_menu_view"></ImageView>
			<TextView android:id="@+id/EventWebActionTextView" android:layout_width="wrap_content" android:text="@string/event_web" android:textStyle="bold" android:textSize="24px" android:typeface="normal" android:layout_gravity="center_vertical" android:textColor="#000000" android:layout_height="wrap_content" android:paddingRight="5px"></TextView>
		</LinearLayout>

	</LinearLayout>


</LinearLayout>
